Fix GitHub Actions deployment permissions
- Add explicit permissions for GITHUB_TOKEN (contents:read, pages:write, id-token:write)
- Update peaceiris/actions-gh-pages to v4 for better compatibility
- Remove pull_request trigger to only deploy on master push
- Remove redundant conditional check

This should resolve the 403 permission error during deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,12 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
+# Add explicit permissions for GITHUB_TOKEN
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -27,8 +31,7 @@ jobs:
       run: npm run build
       
     - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/master'
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist 
