Fix GitHub Actions deployment permissions v2
- Add explicit contents: write permission to workflow
- Add fetch-depth: 0 for full git history
- Add explicit user name/email for git commits
- This should resolve the persistent 403/128 errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches: [ master ]
 
-# Minimal permissions needed
+# Add write permissions specifically for contents and pages
 permissions:
-  contents: read
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -15,6 +17,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
       
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -33,4 +38,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
-        force_orphan: true 
+        force_orphan: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com' 
