--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "vite",
     "build": "npx vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist -f"
+    "deploy": "npm run build && gh-pages -d dist -f",
+    "test": "node tests/test-runner.js",
+    "test:build": "node tests/build-validator.js",
+    "test:deployment": "node tests/deployment-validator.js",
+    "test:integration": "node tests/integration-tests.js",
+    "test:all": "npm run test:build && npm run test:deployment && npm run test:integration"
   },
   "keywords": ["pixijs", "game", "vampire-survivors", "typescript"],
   "author": "",
@@ -17,7 +22,10 @@
     "@types/node": "^20.0.0",
     "gh-pages": "^6.1.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "puppeteer": "^21.0.0",
+    "node-fetch": "^3.3.0",
+    "chalk": "^5.3.0"
   },
   "dependencies": {
     "pixi.js": "^7.4.0"
