--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:build": "node tests/build-validator.js",
     "test:deployment": "node tests/deployment-validator.js",
     "test:integration": "node tests/integration-tests.js",
-    "test:all": "npm run test:build && npm run test:deployment && npm run test:integration"
+    "test:all": "npm run test:build && npm run test:deployment && npm run test:integration",
+    "test:local": "npm run test:build && npm run test:integration"
   },
   "keywords": ["pixijs", "game", "vampire-survivors", "typescript"],
   "author": "",
