--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
     "test:all": "npm run test:build && npm run test:deployment && npm run test:integration",
     "test:local": "npm run test:build && npm run test:integration"
   },
-  "keywords": ["pixijs", "game", "vampire-survivors", "typescript"],
+  "keywords": [
+    "pixijs",
+    "game",
+    "vampire-survivors",
+    "typescript"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "chalk": "^5.3.0",
     "gh-pages": "^6.1.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "puppeteer": "^21.0.0",
     "node-fetch": "^3.3.0",
-    "chalk": "^5.3.0"
+    "puppeteer": "^24.11.2",
+    "typescript": "^5.0.0",
+    "vite": "^7.0.0"
   },
   "dependencies": {
     "pixi.js": "^7.4.0"
   }
-} 
+}
