fix: Improve deployment workflow with cache busting and debugging

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,15 @@ jobs:
     - name: Build
       run: npm run build
       
+    - name: List built files
+      run: |
+        echo "Built files:"
+        ls -la dist/
+        echo "Sprite files:"
+        ls -la dist/sprites/
+        echo "Asset files:"
+        ls -la dist/assets/
+      
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
@@ -40,4 +49,6 @@ jobs:
         publish_dir: ./dist
         force_orphan: true
         user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com' 
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        cname: ''
+        commit_message: 'Deploy v${{ github.run_number }} - Force cache refresh' 
