--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "test:deployment": "node tests/deployment-validator.js",
     "test:integration": "node tests/integration-tests.js",
     "test:all": "npm run test:build && npm run test:deployment && npm run test:integration",
-    "test:local": "npm run test:build && npm run test:integration"
+    "test:local": "npm run test:build && npm run test:integration",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "type-check": "tsc --noEmit",
+    "test:unit": "jest",
+    "test:coverage": "jest --coverage",
+    "quality-check": "npm run lint && npm run type-check && npm run test:unit",
+    "prepare": "husky"
   },
   "keywords": [
     "pixijs",
@@ -25,15 +33,37 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.19.4",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "chalk": "^5.3.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "gh-pages": "^6.1.0",
+    "husky": "^9.1.7",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "lint-staged": "^16.1.2",
     "node-fetch": "^3.3.0",
+    "prettier": "^3.6.2",
     "puppeteer": "^24.11.2",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.0.0",
     "vite": "^7.0.0"
   },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "eventemitter3": "^5.0.1",
+    "idb": "^8.0.3",
     "pixi.js": "^7.4.0"
   }
 }
