--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@/*": ["*"]
     },
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
