--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     },
     "types": ["vite/client", "node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test-*.ts"],
   "exclude": ["node_modules", "dist"]
 } 
